--- a/Barbershop/FS9LATAM/index.html
+++ b/Barbershop/FS9LATAM/index.html
@@ -22,6 +22,7 @@
         <h4>Siguiente</h4>
         <h5>Instagram</h5>
         <h5>Youtube</h5>
+        <img src="./Imagenes/imagen 1.jpg" alt="barber" width="500" height="300">
       </section>
       <section>
         <ul>
@@ -81,6 +82,39 @@
             <td>desde 200 UAH</td>
           </tr>
         </table>
-      </section>
+         <button type="button">RESERVA EN LINEA</button>
+        </section>
+          <img src="./Imagenes/imagen 4.jpg" alt="barber" width="500" height="300">
+            <main>
+        <section>
+          <button type="button">600 clientes satisfechos cada dia</button>
+          <button type="button">50 premios a nuestra excelencia</button>
+          <button type="button">20 de los mejores barberos de kiev</button>
+          <button type="button">100</button>
+           <p>A LA VIEJA ESCUELA</p>
+           <h2>¿Por qué nos prefieren a nosotros?</h2>
+           <p>
+            De nosotros solo dicen cosas buenas. pero mejor es verlo y sentirlo una vez, que leerlo 10 veces.
+           </p>
+        </section>
+        <h4>PARA QUIENES DE VERDAD VALORAN LA "ATMOSFERA"</h4>
+        <h2>Nuestros Barberos</h2>
+        <img src="./Imagenes/imagen  5.jpg" alt="barber" width="160" height="150">
+        <h3>John Smith</h3>
+        <h4>Extreme barber</h4>
+        <img src="./Imagenes/imagen 6.jpg" alt="barber" width="160" height="150">
+        <h3>Michele Doe</h3>
+        <h4>Extreme Barber</h4>
+        <img src="./Imagenes/imagen 7.jpg" alt="barber" width="160" height="150">
+        <h3>Alan Black</h3>
+        <h4>Extreme Barber</h4>
+      </main>
+      <footer>
+        <h4>LA PALABRA BARBERIA TIENE SUS RAICES EN EL LATIN</h4>
+        <img src="./Imagenes/imagen 8.jpg" alt="barber" width="140" height="180">
+        <img src="./Imagenes/imagen 9.jpg" alt="barber" width="140" height="180">
+        <img src="./Imagenes/imagen 10.jpg" alt="barber" width="140" height="180">
+        <img src="./Imagenes/imagen 11.jpg" alt="barber" width="140" height="180">
+      </footer>
     </body>
 </html>
